--- a/css/estilos.css
+++ b/css/estilos.css
@@ -2,10 +2,10 @@
     --var-familia-fuente: 'Inter', system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     --var-fondo-oscuro: #1a1a1a;
     --var-fondo-menos-oscuro: #2b2b2b;
-    --var-borde-color: #3d3d3d;
+    --var-borde-color: #87def832;
     --var-color-texto: #e9e9e9;
-    --var-color-acento: #00bfff;
-    --var-color-acento-claro: #77ddff;
+    --var-color-acento: #40cffe;
+    --var-color-acento-claro: #a9e9ff;
 }
 
 .acrylic {
