--- a/css/estilos.css
+++ b/css/estilos.css
@@ -99,21 +99,37 @@ ul, ol {
 ul li {
     list-style-type: none;
     padding: 0;
+    overflow: hidden;
 }
 
 ul li ul {
     display: flex;
-    
+    flex-wrap: wrap;
+    border: 1px solid var(--var-borde-color);
+    border-radius: 10px;
+    margin: 0 -1px -1px 0;
+    overflow: hidden;
 }
 
 ul li ul li {
-    flex: 1;
+    flex: 1 0 40%;
+    /*
     border-top: 1px solid var(--var-borde-color);
     border-bottom: 1px solid var(--var-borde-color);
     border-left: 1px solid var(--var-borde-color);
+    */
+    border-right: 1px solid var(--var-borde-color);
+    border-bottom: 1px solid var(--var-borde-color);
     text-align: center;
+    box-sizing: border-box;
 }
 
+ul li ul li:empty {
+    height: 0;
+    border: none;
+}
+
+/*
 ul li ul li:first-child {
     border-top-left-radius: 10px;
     border-bottom-left-radius: 10px;
@@ -124,10 +140,11 @@ ul li ul li:last-child {
     border-top-right-radius: 10px;
     border-bottom-right-radius: 10px;
 }
+*/
 
 ul li ul li a {
     display: block;
-    padding: 16px;
+    padding: 24px 16px;
 }
 
 ul li h2 {
