--- a/css/estilos.css
+++ b/css/estilos.css
@@ -112,35 +112,18 @@ ul li ul {
 }
 
 ul li ul li {
-    flex: 1 0 40%;
-    /*
-    border-top: 1px solid var(--var-borde-color);
-    border-bottom: 1px solid var(--var-borde-color);
-    border-left: 1px solid var(--var-borde-color);
-    */
+    flex: 1 0 41%;
     border-right: 1px solid var(--var-borde-color);
     border-bottom: 1px solid var(--var-borde-color);
     text-align: center;
     box-sizing: border-box;
+    min-width: 200px;
 }
 
 ul li ul li:empty {
     height: 0;
     border: none;
 }
-
-/*
-ul li ul li:first-child {
-    border-top-left-radius: 10px;
-    border-bottom-left-radius: 10px;
-}
-
-ul li ul li:last-child {
-    border-right: 1px solid var(--var-borde-color);
-    border-top-right-radius: 10px;
-    border-bottom-right-radius: 10px;
-}
-*/
 
 ul li ul li a {
     display: block;
